# GildedRose-Refactoring-Kata

python/: .pre-commit-config.yaml  Makefile  gilded_rose.py  notes.md  pyproject.toml  texttest_fixture.py
python/src/: constants.py  gilded_rose.py
python/tests/: test_gilded_rose.py  test_gilded_rose_approvals.py  texttest_fixture.py
python/tests/e2e/: test_gilded_rose_approvals.py
