[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "approvaltests>=15.0.0",
    "coverage>=7.10.1",
    "pre-commit>=4.2.0",
    "pytest-approvaltests>=0.2.4",
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "radon>=6.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=6.2.1",
]
